会員退会機能実装

--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -38,7 +38,7 @@
           </div>
           <div>
             <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <em>(<%= @minimum_password_length %> 文字以上で入力)</em>
             <% end %><br />
             <%= f.password_field :password, autocomplete: "new-password" %>
           </div>
@@ -70,9 +70,6 @@
   </div>
 
 </div>
-
-
-
 
 
 
