--- a/app/views/user/users/confirm.html.erb
+++ b/app/views/user/users/confirm.html.erb
@@ -1,19 +1,53 @@
-<div class="d-flex align-items-center justify-content-center full-height">
-  <div class="text-center">
-    <div>
-      <i class="fa-solid fa-triangle-exclamation fa-8x" style="color: #6C757D; margin-top: 100px;"></i>
-    </div>
-    <h4 class="mt-3"><strong>退会手続きを実行してもよろしいでしょうか？</strong></h4>
-    <div class="mt-3">
-      <h6>
+<div class="conrainer d-flex align-items-center justify-content-center full-height">
+  <table>
+    <tr>
+      <td class="text-center">
+        <i class="fa-solid fa-triangle-exclamation fa-8x" style="color: #6C757D; margin-top: 100px;"></i>
+      </td>
+    </tr>
+    <tr>
+      <td class="text-center">
+        <h4 class="mt-3"><strong>退会手続きを実行してもよろしいでしょうか？</strong></h4>
+      </td>
+    </tr>
+    <tr>
+      <td class="text-center mt-3">
+        <h6>
         退会手続きが完了した時点で、ログインができなくなります。<br>
         再度サービスを利用する際は会員登録が必要になります。<br>
         ご注意ください。
       </h6>
-    </div>
-    <div class="mt-4">
-      <%= link_to "戻る", edit_mypage_path, class: "btn btn-outline-secondary mr-2" %>
-      <%= link_to "退会する", withdraw_users_path, class: "btn btn-danger ml-2", method: :patch, data: { confirm: "本当に退会しますか？" } %>
-    </div>
-  </div>
+      </td>
+    </tr>
+    <tr>
+      <td class="text-center">
+        <div class="d-flex justify-content-center">
+          <%= link_to "戻る", edit_mypage_path, class: "btn btn-outline-secondary mr-2" %>
+          <%= link_to "退会する", withdraw_users_path, class: "btn btn-danger ml-2", method: :patch, data: { confirm: "本当に退会しますか？" } %>
+        </div>
+      </td>
+    </tr>
+  </table>
 </div>
+
+
+
+<!--<div class="d-flex align-items-center justify-content-center full-height">-->
+<!--  <div class="text-center">-->
+<!--    <div>-->
+<!--      <i class="fa-solid fa-triangle-exclamation fa-8x" style="color: #6C757D; margin-top: 100px;"></i>-->
+<!--    </div>-->
+<!--    <h4 class="mt-3"><strong>退会手続きを実行してもよろしいでしょうか？</strong></h4>-->
+<!--    <div class="mt-3">-->
+<!--      <h6>-->
+<!--        退会手続きが完了した時点で、ログインができなくなります。<br>-->
+<!--        再度サービスを利用する際は会員登録が必要になります。<br>-->
+<!--        ご注意ください。-->
+<!--      </h6>-->
+<!--    </div>-->
+<!--    <div class="mt-4">-->
+<!--      <%= link_to "戻る", edit_mypage_path, class: "btn btn-outline-secondary mr-2" %>-->
+<!--      <%= link_to "退会する", withdraw_users_path, class: "btn btn-danger ml-2", method: :patch, data: { confirm: "本当に退会しますか？" } %>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
