--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -1,3 +1,7 @@
+<div class="text-center">
+  <%= flash[:profile_edit_success] %>
+</div>
+
 <div class="container">
   <div class="mt-4" style="text-align: right;">
     <%= link_to new_post_path, class: "text-dark" do %>
