投稿削除フラッシュメッセージ追加

--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,3 +1,7 @@
+<div class="text-center">
+  <%= flash[:post_destroy_success] %>
+</div>
+
 <div class="container" style="width: 50%;" >
   <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
