--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <%= flash[:profile_edit_success] %>
+  <%= flash[:mypage_edit_success] %>
 </div>
 
 <div class="container">
