フラッシュメッセージレイアウト調整

--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,6 +1,8 @@
-<div class="text-center">
-  <%= flash[:post_destroy_success] %>
-</div>
+<% if flash[:post_destroy_success] %>
+  <div class="alert alert-success mt-4 text-center w-25 mx-auto">
+    <%= flash[:post_destroy_success] %>
+  </div>
+<% end %>
 
 <div class="container" style="width: 50%;" >
   <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
