--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,19 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!--<div class="d-flex justify-content-center flex-grow-1">-->
+        <!--  <% if user_signed_in? %>-->
+        <!--    <strong>ようこそ、<%= current_user.name %>さん！</strong>-->
+        <!--  <% end %>-->
+        <!--</div>-->
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
+              <div class="mt-3 mr-3">
+                <strong>ようこそ、<%= current_user.name %>さん！</strong>
+              </div>
+
               <li class="nav-item">
                 <%= link_to my_page_path, class: "nav-link text-dark text-right" do %>
                   <button class="btn btn-outline-dark">マイページ</button>
