実装フェーズ1完了/1stデプロイ+テスト完了

--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <div class="container">
-  <div class="mt-4" style="text-align: right;">
+  <div class="mt-5" style="text-align: right; margin-right: 40px;">
     <%= link_to new_post_path, class: "text-dark" do %>
       <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>
     <% end %>
