--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -71,7 +71,7 @@
         <td></td>
       </tr>
       <tr>
-        <td colspan="4" style="text-align: center; padding-top: 40px;">
+        <td colspan="4" style="text-align: center; padding-top: 40px; margin-bottom: 40px;">
           <%= link_to "退会する", confirm_users_path, class: "btn btn-danger" %>
           <span style="margin: 0 20px;">&nbsp;</span>
           <%= f.submit "保存する", class: "btn btn-dark" %>
