--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -38,11 +38,46 @@
     <span style="margin: 0 6px;">&nbsp;</span>
     <i class="fa-solid fa-rotate-right"></i> 最終変更日：<%= @post.updated_at.strftime("%Y年%m月%d日") %>
     <p class="card-text mt-3" style="font-size: 20px"><%= @post.body %></p>
-    <div class="d-flex justify-content-end align-items-center mr-4">
+    <div class="d-flex justify-content-left ml-2">
       <div id="like_btn_<%= @post.id %>">
         <%= render 'user/likes/btn', post: @post %>
       </div>
+      <div>
+        <span style="color: #343a40; margin-left: 6px;"><i class="fa-solid fa-comment-dots fa-2x"></i>
+        <span style="font-size: 24px; margin-left: 6px;"><%= @post.post_comments.count %></span>
+      </div>
     </div>
+    <div class="container">
+      <div class="row justify-content-left">
+        <%= form_with model: [@post, @post_comment] do |f| %>
+        <div class="d-flex align-items-center ml-2 mt-4 mb-3" style="width: 100%;">
+          <%= f.text_area :body, cols: 110, placeholder: "コメントを入力", class: "form-control" %>
+          <%= f.submit "送信", class: "btn btn-secondary ml-3"%>
+        </div>
+        <% end %>
+      </div>
+    </div>
+
+    <table>
+      <% @post.post_comments.each do |post_comment| %>
+      <tr>
+        <td>
+          <%= link_to user_path(post_comment.user) do %>
+            <%= image_tag post_comment.user.get_profile_image(30, 30), class: "rounded-circle ml-2" %>
+          <% end %>
+        </td>
+        <td class="ml-2"><%= post_comment.body %></td>
+        <td>
+          <% if post_comment.user == current_user %>
+            <%= link_to "削除", post_post_comment_path(@post, post_comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-outline-danger float-end" %>
+          <% end %>
+        </td>
+      </tr>
+      <% end %>
+    </table>
+
+
+
   </div>
 </div>
 
