--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -89,8 +89,10 @@
         <td style="font-weight: bold; font-size: 20px">
           <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
         </td>
-        <td><i class="fa-regular fa-heart mr-2"></i><%= post.likes.count %></td>
-        <td><i class="fa-regular fa-comment-dots"></i></td>
+        <td>
+          <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
+          <i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %>
+        </td>
       </tr>
       <tr><td colspan="2" style="height: 10px;"></td></tr>
       <% end %>
