--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -43,7 +43,7 @@
         <%= render 'user/likes/btn', post: @post %>
       </div>
       <div>
-        <span style="color: #343a40; margin-left: 14px;"><i class="fa-solid fa-comment-dots fa-2x"></i>
+        <span style="color: #343a40; margin-left: 14px;"><i class="fa-regular fa-comment-dots fa-2x"></i>
         <span style="font-size: 24px;"><%= @post.post_comments.count %></span>
       </div>
     </div>
@@ -66,7 +66,7 @@
             <%= image_tag post_comment.user.get_profile_image(30, 30), class: "rounded-circle ml-2" %>
           <% end %>
         </td>
-        <td class="m">
+        <td class="mb-2">
           <%= post_comment.body %>
           <% if post_comment.user == current_user %>
             <%= link_to "削除", post_post_comment_path(@post, post_comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-outline-danger float-end ml-3" %>
