--- a/app/views/user/post_comments/_form.html.erb
+++ b/app/views/user/post_comments/_form.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="row justify-content-left">
-    <%= form_with model: [post, post_comment], local: false do |f| %>
-    <div class="d-flex align-items-center ml-2 mt-4 mb-3" style="width: 100%;">
-      <%= f.text_area :body, cols: 110, placeholder: "コメントを入力", class: "form-control", id: "comment_textarea" %>
-      <%= f.submit "送信", class: "btn btn-secondary ml-3"%>
-    </div>
-    <% end %>
-  </div>
-</div>
+<!--<div class="container">-->
+<!--  <div class="row justify-content-left">-->
+<!--    <%= form_with model: [post, post_comment], local: false do |f| %>-->
+<!--    <div class="d-flex align-items-center ml-2 mt-4 mb-3" style="width: 100%;">-->
+<!--      <%= f.text_area :body, cols: 110, placeholder: "コメントを入力", class: "form-control", id: "comment_textarea" %>-->
+<!--      <%= f.submit "送信", class: "btn btn-secondary ml-3"%>-->
+<!--    </div>-->
+<!--    <% end %>-->
+<!--  </div>-->
+<!--</div>-->
