--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -42,11 +42,12 @@
       <div id="like_btn_<%= @post.id %>">
         <%= render 'user/likes/btn', post: @post %>
       </div>
-      <div id="comment_counter">
-        <%= render "user/post_comments/counter", post: @post %>
+      <div>
+        <span style="color: #343a40; margin-left: 12px;"><i class="fa-solid fa-comment-dots fa-2x"></i>
+        <span style="font-size: 24px;"><%= @post.post_comments.count %></span>
       </div>
     </div>
-    
+
     <div class="container">
       <div class="row justify-content-left">
         <%= form_with model: [@post, @post_comment] do |f| %>
@@ -58,9 +59,27 @@
       </div>
     </div>
 
-    <div id="comment_index">
-      <%= render "user/post_comments/index", post: @post %>
-    </div>
+    <table>
+      <% @post.post_comments.each do |post_comment| %>
+      <tr>
+        <td>
+          <%= link_to user_path(post_comment.user) do %>
+            <%= image_tag post_comment.user.get_profile_image(30, 30), class: "rounded-circle ml-2" %>
+          <% end %>
+        </td>
+        <td class="ml-3">
+          <%= post_comment.body %>
+          <% if post_comment.user == current_user %>
+            <%= link_to "<i class='fa-regular fa-trash-can'></i>".html_safe,
+            post_post_comment_path(@post, post_comment), method: :delete,
+            data: { confirm: '本当に消しますか？' },
+            class: "btn btn-sm btn-outline-danger rounded-circle float-end ml-3" %>
+          <% end %>
+        </td>
+      </tr>
+      <% end %>
+    </table>
+
   </div>
 </div>
 
