検索機能実装中

--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -43,7 +43,7 @@
         <%= render 'user/likes/btn', post: @post %>
       </div>
       <div>
-        <span style="color: #343a40; margin-left: 12px;"><i class="fa-solid fa-comment-dots fa-2x"></i>
+        <span style="color: #343a40; margin-left: 12px;"><i class="fa-regular fa-comment-dots fa-2x"></i></i>
         <span style="font-size: 24px;"><%= @post.post_comments.count %></span>
       </div>
     </div>
