--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -14,11 +14,11 @@
         </div>
         <div class="text-end mt-4">
           <%= link_to edit_mypage_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark">フォローする</button>
+            <button class="btn btn-primary">フォローする <i class="fa-solid fa-user-plus"></i></button>
           <% end %>
           <span style="margin: 0 6px;">&nbsp;</span>
           <%= link_to chats_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark">チャットする</button>
+            <button class="btn btn-outline-dark">チャットする <i class="fa-solid fa-comment-dots"></i></button>
           <% end %>
         </div>
       </div>
