--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,25 +16,18 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
+      <div class="container" style="margin-left: 170px;">
         <%= link_to 'Wander Mate', root_path, class: 'navbar-brand' %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!--<div class="d-flex justify-content-center flex-grow-1">-->
-        <!--  <% if user_signed_in? %>-->
-        <!--    <strong>ようこそ、<%= current_user.name %>さん！</strong>-->
-        <!--  <% end %>-->
-        <!--</div>-->
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              <div class="mt-3 mr-3">
+              <li class="mt-3 mr-3">
                 <strong>ようこそ、<%= current_user.name %>さん！</strong>
-              </div>
-
+              </li>
               <li class="nav-item">
                 <%= link_to my_page_path, class: "nav-link text-dark text-right" do %>
                   <button class="btn btn-outline-dark">マイページ</button>
@@ -60,6 +53,11 @@
           </ul>
         </div>
       </div>
+
+      <div class="mt-2">
+        <%= render 'layouts/search' %>
+      </div>
+
     </nav>
     <%= yield %>
   </body>
