--- a/app/views/user/searches/search.html.erb
+++ b/app/views/user/searches/search.html.erb
@@ -1,9 +1,11 @@
 <div class="container" style="width: 45%;">
+
   <div class="text-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
       <i class="fa-solid fa-magnifying-glass"></i> 検索結果
     </div>
   </div>
+
   <table class="table table-hover table-borderless">
     <% if @range == "ユーザー" %>
       <tbody>
@@ -32,11 +34,6 @@
             <td colspan="2" class="text-center">該当するユーザーが見つかりませんでした。</td>
           </tr>
         <% end %>
-        
-        <div class="pagination d-flex justify-content-center mt-5 mb-5">
-          <%= paginate @users %>
-        </div>
-
       </tbody>
     <% elsif @range == "投稿" %>
       <tbody>
@@ -73,13 +70,17 @@
             <td colspan="2" class="text-center">該当する投稿が見つかりませんでした。</td>
           </tr>
         <% end %>
-        
-        <div class="pagination d-flex justify-content-center mt-5 mb-5">
-          <%= paginate @posts %>
-        </div>
-        
       </tbody>
     <% end %>
   </table>
+
+  <div class="pagination d-flex justify-content-center mt-5 mb-5">
+    <% if @range == "ユーザー" %>
+      <%= paginate @users %>
+    <% elsif @range == "投稿" %>
+      <%= paginate @posts %>
+    <% end %>
+  </div>
+
 </div>
 
