退会機能を物理削除に修正

--- a/app/views/user/searches/search.html.erb
+++ b/app/views/user/searches/search.html.erb
@@ -2,7 +2,7 @@
 
   <div class="text-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
-      <i class="fa-solid fa-magnifying-glass"></i> 検索結果
+      <i class="fa-solid fa-magnifying-glass"></i> 「<%= @word %>」の検索結果
     </div>
   </div>
 
