--- a/app/views/user/users/confirm.html.erb
+++ b/app/views/user/users/confirm.html.erb
@@ -23,7 +23,7 @@
       <td class="text-center">
         <div class="d-flex justify-content-center">
           <%= link_to "戻る", edit_mypage_path, class: "btn btn-outline-secondary mr-2" %>
-          <%= link_to "退会する", withdraw_users_path, class: "btn btn-danger ml-2", method: :patch, data: { confirm: "本当に退会しますか？" } %>
+          <%= link_to "退会する", user_path(0), class: "btn btn-danger ml-2", method: :delete, data: { confirm: "本当に退会しますか？" } %>
         </div>
       </td>
     </tr>
@@ -46,8 +46,8 @@
 <!--      </h6>-->
 <!--    </div>-->
 <!--    <div class="mt-4">-->
-<!--      <%= link_to "戻る", edit_mypage_path, class: "btn btn-outline-secondary mr-2" %>-->
-<!--      <%= link_to "退会する", withdraw_users_path, class: "btn btn-danger ml-2", method: :patch, data: { confirm: "本当に退会しますか？" } %>-->
+<!--      <!%= link_to "戻る", edit_mypage_path, class: "btn btn-outline-secondary mr-2" %>-->
+<!--      <!%= link_to "退会する", withdraw_user_path, class: "btn btn-danger ml-2", method: :patch, data: { confirm: "本当に退会しますか？" } %>-->
 <!--    </div>-->
 <!--  </div>-->
 <!--</div>-->
