管理者ページヘッダー設定

--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row col-11" style="margin: auto;">
       <div class="col-12 col-md-3 mb-3 mb-md-0">
-        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-
+        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>
       </div>
       <div class="col-12 col-md-8">
         <div style="font-weight: bold; font-size: 50px;">
