--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,25 @@
                   <button class="btn btn-outline-dark">ログアウト</button>
                 <% end %>
               </li>
+            <% elsif admin_signed_in? %>
+              <li class="mt-3 mr-3">
+                ※管理者ログイン中
+              </li>
+              <li class="nav-item">
+                <%= link_to my_page_path, class: "nav-link text-dark text-right" do %>
+                  <button class="btn btn-outline-dark">投稿一覧</button>
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to my_page_path, class: "nav-link text-dark text-right" do %>
+                  <button class="btn btn-outline-dark">ユーザー一覧</button>
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-dark text-right" do %>
+                  <button class="btn btn-outline-dark">ログアウト</button>
+                <% end %>
+              </li>
             <% else %>
               <li class="nav-item">
                 <%= link_to new_user_registration_path, class: "nav-link text-dark text-right" do %>
