--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,48 @@
 <h1>admin/top</h1>
+<div class="container" style="width: 50%;" >
+  <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
+    <div style="font-weight: bold; font-size: 30px;">
+      <i class="fa-solid fa-map-pin"></i> みんなの投稿
+    </div>
+  </div>
+</div>
 
+
+  <% @posts.each do |post| %>
+    <div class="shadow card mb-3" style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
+      <% if post.post_image.attached? %>
+        <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%;" %>
+      <% else %>
+        <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
+      <% end %>
+      <div class="card-body">
+        <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
+        <p>
+          <%= link_to admin_user_path(post.user) do %>
+            <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
+            <span style="font-weight: bold; margin-right: 5px; color: black;"><%= post.user.name %></span>
+          <% end %>
+          <i class="fa-regular fa-clock"></i> 投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
+        </p>
+        <p class="card-text"><%= post.body %></p>
+        <p class="card-text">
+          <div class="d-flex justify-content-between align-items-center">
+            <%= link_to admin_post_path(post.id) do %>
+              <button class="btn btn-dark ml-2">詳細を見る</button>
+            <% end %>
+            <div class="d-flex align-items-center mr-3">
+              <i class="fa-regular fa-heart fa-2x"></i>
+              <span style="font-size: 24px;"><%= post.likes.count %></span>
+              <i class="fa-regular fa-comment-dots fa-2x ml-4 mr-2"></i>
+              <span style="font-size: 24px;"><%= post.post_comments.count %></span>
+            </div>
+          </div>
+        </p>
+      </div>
+    </div>
+  <% end %>
+
+
+<div class="pagination d-flex justify-content-center mt-5 mb-5">
+  <%= paginate @posts %>
+</div>
