--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -49,17 +49,19 @@
     </div>
 
     <div class="container">
-      <div class="row justify-content-left">
-        <%= form_with model: [@post, @post_comment] do |f| %>
-        <div class="d-flex align-items-center ml-2 mt-4 mb-3" style="width: 100%;">
-          <%= f.text_area :body, cols: 110, placeholder: "コメントを入力", class: "form-control" %>
-          <%= f.submit "送信", class: "btn btn-secondary ml-3"%>
+      <% if user_signed_in? %>
+        <div class="row justify-content-left">
+          <%= form_with model: [@post, @post_comment] do |f| %>
+          <div class="d-flex align-items-center ml-2 mt-4 mb-3" style="width: 100%;">
+            <%= f.text_area :body, cols: 110, placeholder: "コメントを入力", class: "form-control" %>
+            <%= f.submit "送信", class: "btn btn-secondary ml-3"%>
+          </div>
+          <% end %>
         </div>
-        <% end %>
-      </div>
+      <% end %>
     </div>
 
-    <table>
+    <table class="mt-3">
       <% @post.post_comments.each do |post_comment| %>
       <tr>
         <td>
