--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,4 +1,11 @@
 <h1>admin/top</h1>
+
+<% if flash[:post_destroy_success] %>
+  <div class="alert alert-success mt-4 text-center w-25 mx-auto">
+    <%= flash[:post_destroy_success] %>
+  </div>
+<% end %>
+
 <div class="container" style="width: 50%;" >
   <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
