--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -10,7 +10,7 @@
     </div>
     <% if admin_signed_in? %>
       <div class="ml-auto d-flex">
-        <%= link_to '削除 <i class="fa-solid fa-trash-can"></i>'.html_safe, post_path, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-danger"%>
+        <%= link_to '削除 <i class="fa-solid fa-trash-can"></i>'.html_safe, admin_post_path, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-danger"%>
       </div>
     <% end %>
   </div>
@@ -45,7 +45,7 @@
           <%= post_comment.body %>
           <% if admin_signed_in? %>
             <%= link_to "<i class='fa-regular fa-trash-can'></i>".html_safe,
-            post_post_comment_path(@post, post_comment), method: :delete,
+            admin_post_post_comment_path(@post, post_comment), method: :delete,
             data: { confirm: '本当に消しますか？' },
             class: "btn btn-sm btn-outline-danger rounded-circle float-end ml-3" %>
           <% end %>
