--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
                 ※管理者ログイン中
               </li>
               <li class="nav-item">
-                <%= link_to my_page_path, class: "nav-link text-dark text-right" do %>
+                <%= link_to admin_posts_path, class: "nav-link text-dark text-right" do %>
                   <button class="btn btn-outline-dark">投稿一覧</button>
                 <% end %>
               </li>
