--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,1 +1,102 @@
 <h1>admin/users/show</h1>
+
+<div class="container">
+
+  <div class="container mt-5">
+    <div class="row col-11" style="margin: auto;">
+      <div class="col-12 col-md-3 mb-3 mb-md-0">
+        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-
+      </div>
+      <div class="col-12 col-md-8">
+        <div style="font-weight: bold; font-size: 50px;">
+          <%= @user.name %>
+        </div>
+        <div style="font-size: 20px;">
+          <%= @user.bio %>
+        </div>
+        <div class="text-end mt-4">
+          <%= link_to "退会", admin_user_path, class: "btn btn-outline-danger ml-2",
+          method: :delete, data: { confirm: "本当に退会しますか？" } %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
+    プロフィール
+  </div>
+
+  <table class="table col-10" style="margin: auto;">
+    <tbody>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>性別</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.gender_japanese %>
+        </td>
+        <td style="font-size: 15px;"><strong>年齢</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.age_japanese %>
+        </td>
+      </tr>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>喫煙</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.smoking_japanese %>
+        </td>
+        <td style="font-size: 15px;"><strong>飲酒</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.drinking_japanese %>
+        </td>
+      </tr>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>行った国数</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.country_count.present? ? @user.country_count : '非公開' %>
+        </td>
+        <td style="font-size: 15px;"><strong>好きな地域</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.favorite_area_japanese %>
+        </td>
+      </tr>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>予算</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.budget_japanese %>
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
+    投稿一覧
+  </div>
+
+  <table style="width: 70%; margin: auto; margin-top: 20px;" >
+    <tbody>
+      <% @posts.each do |post| %>
+      <tr>
+        <td>
+          <%= link_to admin_user_path(post.user) do %>
+          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
+          <span style="color: #343a40; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
+          <% end %>
+        </td>
+        <td style="font-weight: bold; font-size: 20px">
+          <%= link_to post.title, admin_post_path(post.id), style: "color: #343a40;" %>
+        </td>
+        <td>
+          <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
+          <i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %>
+        </td>
+      </tr>
+      <tr><td colspan="2" style="height: 10px;"></td></tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div class="pagination d-flex justify-content-center mt-4 mb-5">
+    <%= paginate @posts %>
+  </div>
+</div>
