--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
                 <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to my_page_path, class: "nav-link text-dark text-right" do %>
+                <%= link_to admin_users_path, class: "nav-link text-dark text-right" do %>
                   <button class="btn btn-outline-dark">ユーザー一覧</button>
                 <% end %>
               </li>
