--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,7 +1,15 @@
 <div class="search_form">
-  <%= form_with url: search_path, local: true, method: :get do |f| %>
-    <%= f.select :range, options_for_select([['ユーザー'], ['投稿']]) %>
-    <%= f.text_field :word, placeholder: "検索ワードを入力" %>
-    <%= f.submit "検索", class: "btn btn-outline-dark" %>
+  <% if admin_signed_in? %>
+    <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
+      <%= f.select :range, options_for_select([['ユーザー'], ['投稿']]) %>
+      <%= f.text_field :word, placeholder: "検索ワードを入力" %>
+      <%= f.submit "検索", class: "btn btn-outline-dark" %>
+    <% end %>
+  <% else %>
+    <%= form_with url: search_path, local: true, method: :get do |f| %>
+      <%= f.select :range, options_for_select([['ユーザー'], ['投稿']]) %>
+      <%= f.text_field :word, placeholder: "検索ワードを入力" %>
+      <%= f.submit "検索", class: "btn btn-outline-dark" %>
+    <% end %>
   <% end %>
 </div>
