--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,15 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <body style="background-color: #eeeed3;">
+    <nav class="navbar navbar-expand-lg custom-navbar">
       <div class="container" style="margin-left: 170px;">
         <% if admin_signed_in? %>
-          <%= link_to 'Wander Mate', admin_top_path, class: 'navbar-brand' %>
+          <%= link_to 'Wander Mate', admin_top_path, class: 'navbar-brand header_logo',
+          style: 'font-size: 30px; color: #33231d;' %>
         <% else %>
-          <%= link_to 'Wander Mate', root_path, class: 'navbar-brand' %>
+          <%= link_to 'Wander Mate', root_path, class: 'navbar-brand header_logo',
+          style: 'font-size: 30px; color: #33231d;'  %>
         <% end %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,16 +32,20 @@
           <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li class="mt-3 mr-3">
-                <strong>ようこそ、<%= current_user.name %>さん！</strong>
+                <strong style="color: #33231d;">ようこそ、<%= current_user.name %>さん！</strong>
               </li>
               <li class="nav-item">
-                <%= link_to my_page_path, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark">マイページ</button>
+                <%= link_to my_page_path, class: "nav-link" do %>
+                  <button class="btn btn-outline-dark custom-button" style="border-radius: 25px;">
+                    マイページ
+                  </button>
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark">ログアウト</button>
+                  <button class="btn btn-outline-dark custom-button" style="border-radius: 25px;">
+                    ログアウト
+                  </button>
                 <% end %>
               </li>
             <% elsif admin_signed_in? %>
@@ -48,28 +54,28 @@
               </li>
               <li class="nav-item">
                 <%= link_to admin_posts_path, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark">投稿一覧</button>
+                  <button class="btn btn-outline-dark custom-button" style="border-radius: 25px;">投稿一覧</button>
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to admin_users_path, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark">ユーザー一覧</button>
+                  <button class="btn btn-outline-dark custom-button" style="border-radius: 25px;">ユーザー一覧</button>
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark">ログアウト</button>
+                  <button class="btn btn-outline-dark custom-button" style="border-radius: 25px;">ログアウト</button>
                 <% end %>
               </li>
             <% else %>
               <li class="nav-item">
                 <%= link_to new_user_registration_path, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark">会員登録</button>
+                  <button class="btn btn-outline-dark logout-custom-button" style="border-radius: 25px;">会員登録</button>
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to new_user_session_path, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark">ログイン</button>
+                  <button class="btn btn-outline-dark logout-custom-button" style="border-radius: 25px;">ログイン</button>
                 <% end %>
               </li>
             <% end %>
