--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -57,7 +57,7 @@
       <tr>
         <td>
           <div class="mt-4 text-center">
-            <%= f.submit "会員登録", class: "btn btn-dark"%>
+            <%= f.submit "会員登録", class: "btn btn-dark sign-up-button", style: "border-radius: 25px;" %>
           </div>
         </td>
       </tr>
