--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -9,7 +9,7 @@
 <div class="container" style="width: 50%;" >
   <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
-      <i class="fa-solid fa-map-pin"></i> みんなの投稿
+      <i class="fa-solid fa-map-pin" style="color: #33231d;"></i> <span style="color: #33231d;">みんなの投稿</span>
     </div>
   </div>
 </div>
