--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -7,10 +7,12 @@
 <div class="container" style="width: 50%;" >
   <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
-      <i class="fa-solid fa-map-pin"></i> みんなの投稿
+      <i class="fa-solid fa-map-pin" style="color: #33231d;"></i> <span style="color: #33231d;">みんなの投稿</span>
     </div>
-    <%= link_to new_post_path, class: "text-dark" do %>
-      <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>
+    <%= link_to new_post_path do %>
+      <button class="btn btn-dark btn-lg post-new-button" style="border-radius: 50px;">
+        <strong>投稿を作成する</strong> <i class="fa-solid fa-pen"></i>
+      </button>
     <% end %>
     </div>
   </div>
