--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:post_destroy_success] %>
-  <div class="alert alert-success mt-4 text-center w-25 mx-auto">
+  <div class="alert success-flash mt-4 text-center w-25 mx-auto">
     <%= flash[:post_destroy_success] %>
   </div>
 <% end %>
@@ -10,8 +10,8 @@
       <i class="fa-solid fa-map-pin" style="color: #33231d;"></i> <span style="color: #33231d;">みんなの投稿</span>
     </div>
     <%= link_to new_post_path do %>
-      <button class="btn btn-dark btn-lg post-new-button" style="border-radius: 50px;">
-        <strong>投稿を作成する</strong> <i class="fa-solid fa-pen"></i>
+      <button class="btn btn-dark btn-lg top-post-new-button" style="border-radius: 50px;">
+        <strong style="font-size: 30px;">投稿を作成する</strong> <i class="fa-solid fa-pen"></i>
       </button>
     <% end %>
     </div>
@@ -19,18 +19,19 @@
 
 
   <% @posts.each do |post| %>
-    <div class="shadow card mb-3" style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
+    <div class="shadow card mb-3 text-color"
+         style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
       <% if post.post_image.attached? %>
         <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%;" %>
       <% else %>
         <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
       <% end %>
       <div class="card-body">
-        <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
+        <h5 class="card-title" style="font-weight: bold; font-size: 20px;"><%= post.title %></h5>
         <p>
           <%= link_to user_path(post.user) do %>
             <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
-            <span style="font-weight: bold; margin-right: 5px; color: black;"><%= post.user.name %></span>
+            <span style="font-weight: bold; margin-right: 5px; color: #33231d;"><%= post.user.name %></span>
           <% end %>
           <i class="fa-regular fa-clock"></i> 投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
         </p>
@@ -38,14 +39,14 @@
         <p class="card-text">
           <div class="d-flex justify-content-between align-items-center">
             <%= link_to post_path(post.id) do %>
-              <button class="btn btn-dark ml-2">詳細を見る</button>
+              <button class="btn btn-dark button" style="border-radius: 25px;">詳細を見る</button>
             <% end %>
             <div class="d-flex align-items-center mr-3">
               <div id="like_btn_<%= post.id %>">
                 <%= render 'user/likes/btn', post: post %>
               </div>
-              <i class="fa-regular fa-comment-dots fa-2x ml-4 mr-2"></i>
-              <span style="font-size: 24px;"><%= post.post_comments.count %></span>
+              <i class="fa-regular fa-comment-dots fa-2x ml-4 mr-2" style="color: #33231d;"></i>
+              <span style="font-size: 24px; color: #33231d;"><%= post.post_comments.count %></span>
             </div>
           </div>
         </p>
