--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-color">
   <%= render "user/shared/error_messages", resource: @post %>
 
   <%= form_with model: @post, url: post_path, method: :patch do |f| %>
@@ -8,7 +8,7 @@
         投稿を編集する <i class="fa-solid fa-pen"></i>
       </th>
     </thead>
-    
+
     <tbody>
       <tr style="line-height: 4; vertical-align: middle;">
         <td>
@@ -44,7 +44,7 @@
   </table>
 
   <div class="text-center" style="margin-top: 40px;">
-    <%= f.submit "保存する", class: "btn-lg btn-dark " %>
+    <%= f.submit "保存する", class: "btn-lg btn-dark button", style: "border-radius: 25px;" %>
   </div>
 
   <% end %>
