--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,33 +1,34 @@
 <% if flash[:post_success] %>
-  <div class="alert alert-success mt-4 text-center w-25 mx-auto">
+  <div class="alert success-flash mt-4 text-center w-25 mx-auto">
     <%= flash[:post_success] %>
   </div>
 <% end %>
 <% if flash[:post_edit_success] %>
-  <div class="alert alert-success mt-4 text-center w-25 mx-auto">
+  <div class="alert success-flash mt-4 text-center w-25 mx-auto">
     <%= flash[:post_edit_success] %>
   </div>
 <% end %>
 
-<div class="shadow-lg card mb-5 mt-5" style="width: 60%; margin: auto; border-radius: 25px; overflow: hidden;">
+<div class="shadow-lg card mb-5 mt-5 text-color" style="width: 60%; margin: auto; border-radius: 25px; overflow: hidden;">
   <div class="card-header d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
       <%= link_to user_path(@post.user) do %>
         <%= image_tag @post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: black;"><%= @post.user.name %>
+        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: #33231d;"><%= @post.user.name %>
       <% end %>
     </div>
     <% if current_user == @post.user %>
       <div class="ml-auto d-flex">
         <%= link_to edit_post_path, class: "text-dark text-right mr-2" do %>
-          <button class="btn btn-outline-dark">投稿を編集する <i class="fa-solid fa-pen"></i></button>
+          <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">編集 <i class="fa-solid fa-pen"></i></button>
         <% end %>
-        <%= link_to '削除 <i class="fa-solid fa-trash-can"></i>'.html_safe, post_path, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-danger"%>
+        <%= link_to '削除 <i class="fa-solid fa-trash-can"></i>'.html_safe, post_path, method: :delete,
+        data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-danger post-delete-button", style: "border-radius: 25px;" %>
       </div>
     <% end %>
   </div>
 
-  <div class="card-body">
+  <div class="card-body text-color">
     <% if @post.post_image.attached? %>
       <%= image_tag @post.post_image, class: "card-img-top", style: "width: 100%;" %>
     <% else %>
@@ -43,7 +44,7 @@
         <%= render 'user/likes/btn', post: @post %>
       </div>
       <div>
-        <span style="color: #343a40; margin-left: 12px;"><i class="fa-regular fa-comment-dots fa-2x"></i></i>
+        <span style="color: #33231d; margin-left: 12px;"><i class="fa-regular fa-comment-dots fa-2x"></i></i>
         <span style="font-size: 24px;"><%= @post.post_comments.count %></span>
       </div>
     </div>
@@ -54,7 +55,7 @@
           <%= form_with model: [@post, @post_comment] do |f| %>
           <div class="d-flex align-items-center ml-2 mt-4 mb-3" style="width: 100%;">
             <%= f.text_area :body, cols: 110, placeholder: "コメントを入力", class: "form-control" %>
-            <%= f.submit "送信", class: "btn btn-secondary ml-3"%>
+            <%= f.submit "送信", class: "btn btn-secondary comment-send-button ml-3", style: "border-radius: 25px;" %>
           </div>
           <% end %>
         </div>
