--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="cotainer">
+<div class="cotainer text-color">
   <div class="text-center mt-3">
     <%= render "user/shared/error_messages", resource: @user %>
   </div>
@@ -65,7 +65,7 @@
   </table>
   <% end %>
 
-  <div class="row d-flex justify-content-center mt-4">
+  <div class="row d-flex justify-content-center mt-4 ">
     <%= render "user/shared/links" %>
   </div>
 
