--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="container mt-5">
+  <div class="container text-color mt-5">
     <div class="row col-11" style="margin: auto;">
       <div class="col-12 col-md-3 mb-3 mb-md-0">
         <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-
@@ -25,8 +25,9 @@
     </div>
   </div>
 
-  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
-    プロフィール
+  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
+       class="text-center">
+    【プロフィール】
   </div>
 
   <table class="table col-10" style="margin: auto;">
@@ -73,7 +74,7 @@
   </table>
 
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
-    投稿一覧
+    【投稿一覧】
   </div>
 
   <table style="width: 70%; margin: auto; margin-top: 20px;" >
