--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -1,52 +1,59 @@
 <% if flash[:mypage_edit_success] %>
-  <div class="alert alert-success mt-4 text-center w-25 mx-auto">
+  <div class="alert success-flash mt-4 text-center w-25 mx-auto">
     <%= flash[:mypage_edit_success] %>
   </div>
 <% end %>
 
-<div class="container">
-  <div class="mt-5" style="text-align: right; margin-right: 40px;">
-    <%= link_to new_post_path, class: "text-dark" do %>
-      <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>
-    <% end %>
-  </div>
+<div class="container text-color">
+  <!--<div class="mt-5" style="text-align: right; margin-right: 40px;">-->
+  <!--  <%= link_to new_post_path, class: "text-dark" do %>-->
+  <!--    <button class="btn btn-dark btn-lg mypage-post-new-button" style="border-radius: 50px;">投稿を作成する <i class="fa-solid fa-pen"></i></button>-->
+  <!--  <% end %>-->
+  <!--</div>-->
 
-  <div class="container">
+  <div class="container" style="margin-top: 70px;">
     <div class="row col-11" style="margin: auto;">
       <div class="col-12 col-md-3 mb-3 mb-md-0">
         <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>
       </div>
       <div class="col-12 col-md-8">
-        <div style="font-weight: bold; font-size: 50px;">
+        <div style="font-weight: bold; font-size: 50px;" class="d-flex justify-content-between align-items-center">
           <%= @user.name %>
+          <%= link_to new_post_path, class: "text-dark" do %>
+            <button class="btn btn-dark btn-lg mypage-post-new-button" style="border-radius: 50px;">投稿を作成する <i class="fa-solid fa-pen"></i></button>
+          <% end %>
         </div>
         <div style="font-size: 20px;">
           <%= @user.bio %>
         </div>
         <div class="text-end mt-4">
           <%= link_to edit_mypage_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark">プロフィールを編集する <i class="fa-solid fa-pen"></i></button>
+            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">
+            プロフィールを編集 <i class="fa-solid fa-pen"></i></button>
           <% end %>
           <span style="margin: 0 6px;">&nbsp;</span>
           <%= link_to chats_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark">チャットする <i class="fa-solid fa-comment-dots"></i></button>
+            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">
+            チャット <i class="fa-solid fa-comment-dots"></i></button>
           <% end %>
           <span style="margin: 0 6px;">&nbsp;</span>
           <!--いいねした投稿一覧のurlが作成できてないため暫定的に新規登録画面のurl貼り付けてます-->
           <%= link_to new_post_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark">いいね <i class="fa-solid fa-heart"></i></button>
+            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">
+            いいね <i class="fa-solid fa-heart"></i></button>
           <% end %>
         </div>
       </div>
     </div>
   </div>
 
-  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
-    プロフィール
+  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
+       class="text-center">
+    【プロフィール】
   </div>
 
   <table class="table col-10" style="margin: auto;">
-    <tbody>
+    <tbody class="text-color">
       <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>性別</strong></td>
         <td style="font-size: 20px;">
@@ -89,21 +96,21 @@
   </table>
 
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
-    投稿一覧
+    【投稿一覧】
   </div>
 
   <table style="width: 75%; margin: auto; margin-top: 20px;" >
-    <tbody>
+    <tbody class="text-color">
       <% @posts.each do |post| %>
       <tr>
         <td>
           <%= link_to(post.user) do %>
           <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-          <span style="color: #343a40; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
+          <span style="font-weight: bold; margin-left: 3px; color: #33231d;"><%= post.user.name %></span>
           <% end %>
         </td>
         <td style="font-weight: bold; font-size: 20px">
-          <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
+          <%= link_to post.title, post_path(post.id), style: "color: #33231d;" %>
         </td>
         <td>
           <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
