--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,7 +67,7 @@
 .mypage-post-new-button {
   background-color: #ea4335 !important; /* 通常時の背景色 */
   color: #eeeed3 !important; /* 通常時のテキストカラー */
-  border: 4px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 3px solid #33231d !important; /* 枠線の太さと色を指定 */
   width: 250px; /* 幅を指定 */
   height: 60px; /* 高さを指定 */
   transition: background-color 0.3s, color 0.3s; /* スムーズな遷移 */
@@ -117,6 +117,42 @@
   color: #33231d !important;
 }
 
+.to-confirm-button {
+  background-color: #33231d !important;
+  border: 3px solid #33231d !important;
+  color: #eeeed3 !important;
+  width: 150px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.to-confirm-button:hover {
+  background-color: #eeeed3 !important;
+  color: #33231d !important;
+}
+
+.go-back-button {
+  background-color: #eeeed3 !important;
+  color: #33231d !important;
+  width: 150px;
+  border: 3px solid #33231d !important;
+}
+
+.go-back-button:hover {
+  background-color: #33231d !important;
+  color: #eeeed3 !important;
+}
+
+.withdraw-button {
+  background-color: red !important;
+  color: #eeeed3 !important;
+  width: 150px;
+  border: 3px solid #33231d !important;
+}
+
+.withdraw-button:hover {
+  background-color: #eeeed3 !important;
+  color: red !important;
+}
 
 
 
