--- a/app/views/user/users/confirm.html.erb
+++ b/app/views/user/users/confirm.html.erb
@@ -1,8 +1,8 @@
-<div class="conrainer d-flex align-items-center justify-content-center full-height">
+<div class="conrainer text-color d-flex align-items-center justify-content-center full-height">
   <table>
     <tr>
       <td class="text-center">
-        <i class="fa-solid fa-triangle-exclamation fa-8x" style="color: #6C757D; margin-top: 100px;"></i>
+        <i class="fa-solid fa-triangle-exclamation fa-8x" style="color: #33231d; margin-top: 100px;"></i>
       </td>
     </tr>
     <tr>
@@ -22,8 +22,11 @@
     <tr>
       <td class="text-center">
         <div class="d-flex justify-content-center">
-          <%= link_to "戻る", edit_mypage_path, class: "btn btn-outline-secondary mr-2" %>
-          <%= link_to "退会する", user_path(0), class: "btn btn-danger ml-2", method: :delete, data: { confirm: "本当に退会しますか？" } %>
+          <%= link_to "戻る", edit_mypage_path,
+          class: "btn btn-outline-secondary go-back-button mr-2", style: "border-radius: 25px;" %>
+          <%= link_to "退会する", user_path(0),
+          class: "btn btn-danger withdraw-button ml-2", style: "border-radius: 25px;",
+          method: :delete, data: { confirm: "本当に退会しますか？" } %>
         </div>
       </td>
     </tr>
